# Changelog

## Version 4.3.1

* Adding VCEEncC decoder option
* Fixing VCEEncC interlace being passed "False" string
* Fixing VCEEncC was not being passed profile option

## Version 4.3.0

* Adding VCEEncC encoder support for HEVC and AVC
* Fixing Chinese translations (thanks to leonardyan)
* Fixing #256 Cannot load NVENC profiles because RC Lookahead is stored as int (thanks to Jan Hellwig)

## Version 4.2.3

* Fixing that the queue would not update errored films correctly
* Fixing "None" option for HDR -> SDR tonemap had to be lowercase

## Version 4.2.2

* Fixing output_directory not highest priority (thanks to cwills75)

## Version 4.2.1

* Adding support for source_directory and output_name_format in config file (thanks to cwills75)
* Fixing #129 no subtitles should be enabled, removing need for mkvpropedit (thanks to wiedemanu)
* Fixing network paths not working on Windows
* Changing difference between requirements and requirements-build and removing the build version

## Version 4.2.0

* Adding #109 NVENC HEVC support based on FFmpeg (thanks to Zeid164)
* Adding NVEenC encoder for HEVC and AVC
* Adding #166 More robust queue that is recoverable
* Adding ability to extract HDR10+ metadata if hdr10plus_parser is detected on path
* Adding #178 selector for number of autocrop positions throughout video (thanks to bmcassagne)
* Adding Windows 10 notification for queue complete success
* Adding #194 fast two pass encoding (thanks to Ugurtan)
* Adding Confirm dialogue for cancel encode and replace currently working on video
* Changing AVC defaults and recommendations for CRF to higher values
* Changing VP9 to default to mkv instead of webm format to support more audio codecs
* Fixing German translations (thanks to SMESH)
* Fixing #171 Be able to select encoder before selecting video
* Fixing #176 Unable to change queue order or delete task from queue since 4.1.0 (thanks to Etz)
* Fixing #185 need to specify channel layout when downmixing (thanks to Ugurtan)