@@ -3,6 +3,7 @@
 ## Version 4.3.1
 
 * Adding VCEEncC decoder option
+* Adding support for HDR10+ parser version 1.0.0 and above
 * Fixing VCEEncC interlace being passed "False" string
 * Fixing VCEEncC was not being passed profile option
 
